fix: pins fade only on overflow, spin globe on startup, empty logged-out footer

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -168,7 +168,7 @@
   position: relative;
 }
 
-.pinsListWrap::after {
+.pinsListWrap[data-overflow='true']::after {
   content: '';
   position: absolute;
   left: 0;
